# EvoScientist

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
EvoScientist/: EvoScientist.py  cli.py  paths.py  prompts.py  stt.py  update_check.py
EvoScientist/channels/: README.md  __init__.py  base.py  capabilities.py  channel_manager.py  config.py  consumer.py  formatter.py  middleware.py  mixins.py  plugin.py  retry.py  standalone.py
EvoScientist/channels/bus/: __init__.py  message_bus.py
EvoScientist/channels/discord/: __init__.py  channel.py  probe.py  serve.py
EvoScientist/channels/feishu/: __init__.py  channel.py  serve.py
EvoScientist/channels/imessage/: __init__.py  channel_rpc.py  rpc_client.py  serve.py
EvoScientist/channels/slack/: channel.py
EvoScientist/channels/telegram/: __init__.py  channel.py  probe.py  serve.py
EvoScientist/cli/: __init__.py  _app.py  channel.py  commands.py  file_mentions.py  interactive.py  skills_cmd.py  tui_backends.py  tui_interactive.py
EvoScientist/cli/widgets/: assistant_message.py  chat_input.py  thread_selector.py  timestamp_mixin.py  tool_call_widget.py
EvoScientist/commands/: base.py  channel_ui.py
EvoScientist/commands/implementation/: session.py  skills.py
EvoScientist/config/: onboard.py  settings.py
EvoScientist/llm/: models.py
EvoScientist/mcp/: registry.py
EvoScientist/middleware/: __init__.py  ask_user.py  context_editing.py  memory.py  tool_selector.py  utils.py
EvoScientist/stream/: display.py  emitter.py  events.py  state.py
EvoScientist/tools/: search.py
docs/: README.md
tests/: test_bus_integration.py  test_channel_comprehensive.py  test_channel_manager.py  test_cli_serve.py  test_config.py  test_context_editing_middleware.py  test_context_overflow_middleware.py  test_discord_channel.py  test_feishu_channel.py  test_file_mentions.py  test_llm.py  test_mcp_client.py  test_message_bus.py  test_onboard.py  test_stream_emitter.py  test_stream_state.py  test_stt.py  test_subagent_summarize.py  test_telegram_channel.py  test_thread_selector.py  test_tool_selector_middleware.py  test_update_check.py
